# ImageProcessing

./: .gitignore  CMakeLists.txt  README.md
include/: Algorithms.hpp  Utilities.hpp
src/: Algorithms.cpp  Main.cpp  Utilities.cpp
